--- a/practica4/memoria/input/memoria.tex
+++ b/practica4/memoria/input/memoria.tex
@@ -40,11 +40,11 @@ Se aprecia que en el caso en el que el número de individuos susceptibles (S) es
 
 \newpage
 
-En la figura 1.2 se han cambiado los valores de a y b. Ahora a=0.001 y b=0.0.
+En la figura 1.2 se han cambiado los valores de a y b. Ahora a=0.001 y b=0.05
 
-En el caso de la figura 1.2.a $I_0$ = 100 y $S_0$ = 400, por lo que la población total es de 500.
+En el caso de la figura 1.2.a $I_0$ = 100 y $S_0$ = 200, por lo que la población total es de 300.
 
-En el caso de la figura 1.2.b, $I_0$ = 100 y $S_0$ = 600, por lo que la población del sistema es 700. Para esta nueva configuración b/a = 500.
+En el caso de la figura 1.2.b, $I_0$ = 100 y $S_0$ = 800, por lo que la población del sistema es 900. Para esta nueva configuración b/a = 500.
 
 Cuando $S_0$ no supera b/a el número de individuos retirados (R) supera al número de individuos susceptibles (S) mucho antes que cuando $S_0$ supera a b/a.
 
