--- a/ejercicios_examen/montecarlo/memoria/memoria.tex
+++ b/ejercicios_examen/montecarlo/memoria/memoria.tex
@@ -17,8 +17,8 @@
 \usepackage{subcaption}
 
 \author{Alejandro Manzanares Lemus}
-\title{Práctica 4}
-\date{18 de enero de 2021}
+\title{Ejercicio de Montecarlo}
+\date{1 de febrero de 2021}
 
 % Document composition
 
@@ -27,11 +27,11 @@
 \AqMaketitle[cover    = cover,
              org      = Simulación de Sistemas,
              url      = alexmnzlms@correo.ugr.es]
-\AqSetChapter{Apartado}
+\AqSetChapter{Ejercicio}
 \AqSetSection{}
 \tableofcontents
 
 % Document files
-\input{input/memoria.tex}
+\input{input/montecarlo.tex}
 
 \end{document}
