Memoria Montecarlo II

--- a/ejercicios_examen/montecarlo/memoria/input/montecarlo.tex
+++ b/ejercicios_examen/montecarlo/memoria/input/montecarlo.tex
@@ -30,16 +30,16 @@ Como podemos ver, de media cada día el deposito rojo almacena un total de 374.1
 Por lo tanto, el deposito rojo es capaz de almacenar la cantidad de papel usado acumulada durante un año.
 
 \subsection{Capacidad del deposito verde}
-El caso del deposito verde es mucho más preocupante. Vemos que al dia, este deposito almacena de media unos 59.7768kg de papel reciclado. Este es un valor muy por debajo del limite de 300 kg que tiene el depósito verde. Aún así, podemos ver como cada año, de media, se desperdician 493.5 kg de papel reciclado que no se puede almacenar.
+El caso del deposito verde es mucho más preocupante. Vemos que al día, este deposito almacena de media unos 59.7768 kg de papel reciclado. Este es un valor muy por debajo del limite de 300 kg que tiene el depósito verde. Aún así, podemos ver como cada año, de media, se desperdician 493.5 kg de papel reciclado que no se puede almacenar.
 Y lo que es aun peor, tampoco hay suficiente papel reciclado para satisfacer la demanda del mismo. De media, cada año no se pudo vender 17088.8 kg necesarios para cubrir la demanda de papel.
 
-Por lo que, el deposito verde no es lo suficientemente grande para alamacenar la cantidad de papel reciclado que se acumula cada año.
+Por lo que, el deposito verde no es lo suficientemente grande para almacenar la cantidad de papel reciclado que se acumula cada año.
 
 \subsection{Demanda de papel reciclado}
 
 Para responder a la pregunta de si resulta necesario aumentar la capacidad de reciclado de la planta para satisfacer la demanda de papel reciclado, se ha hecho un estudio sobre qué rendimiento debería tener la planta de reciclaje para satisfacer esta demanda.
 
-De base, por cada 30 kg de papel usado, se obtiene 10 kg de papel reciclado. Ya ha quedado demostrado que este rendiemiento no es suficiente para satisfacer la demanda de papel reciclado.
+De base, por cada 30 kg de papel usado, se obtiene 10 kg de papel reciclado. Ya ha quedado demostrado que este rendimiento no es suficiente para satisfacer la demanda de papel reciclado.
 
 Por tanto, he probado ha aumentar 1 kg de papel reciclado extra obtenido por cada 3 kg de papel usado. Este ha sido el resultado:
 
@@ -51,7 +51,7 @@ Por tanto, he probado ha aumentar 1 kg de papel reciclado extra obtenido por cad
 
 En la figura anterior, se observa como al duplicar el rendimiento de procesamiento de papel, se consigue satisfacer la demanda de papel reciclado casi en tu totalidad.
 
-Por tanto bastaria con obtener 1 kg extra de papel reciclado por cada 3kg de papel usado, es decir, obtener 2kg de papel reciclado por cada 3 kg de papel usado.
+Por tanto bastaría con obtener 1 kg extra de papel reciclado por cada 3 kg de papel usado, es decir, obtener 2 kg de papel reciclado por cada 3 kg de papel usado.
 
-Me gustaría recalcar el hecho, de que como el deposito verde no es lo suficientemente grande para contener toda la cantidad de papel reciclado que se acumula durante un año, el aumento del rendimiento en el procesado, provocaría que se desperdiciara una cantidad enorme de papel reciclado. Concretamente con el aumento antes descrito, se estarian desperdiciando aproximadamente 28000 kg de papel reciclado cada año de media.
+Me gustaría recalcar el hecho, de que como el deposito verde no es lo suficientemente grande para contener toda la cantidad de papel reciclado que se acumula durante un año, el aumento del rendimiento en el procesado, provocaría que se desperdiciara una cantidad enorme de papel reciclado. Concretamente con el aumento antes descrito, se estarían desperdiciando aproximadamente 28000 kg de papel reciclado cada año de media.
 
