--- a/ejercicios_examen/montecarlo/memoria/input/montecarlo.tex
+++ b/ejercicios_examen/montecarlo/memoria/input/montecarlo.tex
@@ -2,38 +2,38 @@
 
 \section{Ejecución de la simulación}
 
-El codigo del simulador de esta planta de reciclaje de papel se encuentra disponible en \textbf{src/papel.cpp} e \textbf{include/papel.h}
+El código del simulador de esta planta de reciclaje de papel se encuentra disponible en \textbf{src/papel.cpp} e \textbf{include/papel.h}
 
-Para la realización de este ejercicio, se han realizado 1000000 ejecuciones de la simulación, lo que en terminos del sistema implica que se ha simulado el comportamiento de esta planta de reciclaje de papel durante 1000000 años.
+Para la realización de este ejercicio, se han realizado 1000000 ejecuciones de la simulación, lo que en términos del sistema implica que se ha simulado el comportamiento de esta planta de reciclaje de papel durante 1000000 años.
 
 Estos son los resultados obtenidos de dicha simulación:
 
 \begin{itemize}
-	\item \textbf{Numero de simulaciones}: 1000000
-	\item \textbf{Kg de papel usado / dia (media)}: 374.149\\
-		Este valor nos indica cuantos kilogramos de papel usado contenia el deposito rojo cada día.
-	\item \textbf{Kg de papel reciclado / dia (media)}: 59.7768\\
-		Este valor nos indica cuantos kilogramos de papel reciclado contenia el deposito verde cada día.
+	\item \textbf{Número de simulaciones}: 1000000
+	\item \textbf{Kg de papel usado / día (media)}: 374.149\\
+		Este valor nos indica cuantos kilogramos de papel usado contenia el depósito rojo cada día.
+	\item \textbf{Kg de papel reciclado / día (media)}: 59.7768\\
+		Este valor nos indica cuantos kilogramos de papel reciclado contenia el depósito verde cada día.
 	\item \textbf{Kg de papel usado excedido / año (media)}: 30.9376\\
-		Este valor nos indica cuantos kilogramos de papel usado se ha desperdiciado cada año debido a que el deposito rojo estaba lleno.
+		Este valor nos indica cuantos kilogramos de papel usado se ha desperdiciado cada año debido a que el depósito rojo estaba lleno.
 	\item \textbf{Kg de papel reciclado excedido / año (media) }: 493.5\\
-		Este valor nos indica cuantos kilogramos de papel reciclado se ha desperdiciado cada año debido a que el deposito verde estaba lleno.
+		Este valor nos indica cuantos kilogramos de papel reciclado se ha desperdiciado cada año debido a que el depósito verde estaba lleno.
 	\item \textbf{Demanda de papel reciclado insatisfecha / año (media)}: 17088.8\\
-		Este valor nos indica cuantos kilogramos de papel reciclado no se ha podido vender debido a que la cantidad almacenada en el deposito verde era menor que la demanda.
+		Este valor nos indica cuantos kilogramos de papel reciclado no se ha podido vender debido a que la cantidad almacenada en el depósito verde era menor que la demanda.
 \end{itemize}
 
 Estos datos nos llevan a responder a las siguientes cuestiones:
 
-\subsection{Capacidad del deposito rojo}
-Como podemos ver, de media cada día el deposito rojo almacena un total de 374.149 kg. Esta cantidad es bastante inferior al limite de almacenamiento que posee. Además cada año, de media, sólo se desperdician 30.9376 kg de papel usado, lo que a mi parecer, es una cifra lo bastante baja, como para no necesitar una ampliación del deposito rojo.
+\subsection{Capacidad del depósito rojo}
+Como podemos ver, de media cada día el depósito rojo almacena un total de 374.149 kg. Esta cantidad es bastante inferior al límite de almacenamiento que posee. Además cada año, de media, sólo se desperdician 30.9376 kg de papel usado, lo que a mi parecer, es una cifra lo bastante baja, como para no necesitar una ampliación del depósito rojo.
 
-Por lo tanto, el deposito rojo es capaz de almacenar la cantidad de papel usado acumulada durante un año.
+Por lo tanto, el depósito rojo es capaz de almacenar la cantidad de papel usado acumulada durante un año.
 
-\subsection{Capacidad del deposito verde}
-El caso del deposito verde es mucho más preocupante. Vemos que al día, este deposito almacena de media unos 59.7768 kg de papel reciclado. Este es un valor muy por debajo del limite de 300 kg que tiene el depósito verde. Aún así, podemos ver como cada año, de media, se desperdician 493.5 kg de papel reciclado que no se puede almacenar.
+\subsection{Capacidad del depósito verde}
+El caso del depósito verde es mucho más preocupante. Vemos que al día, este depósito almacena de media unos 59.7768 kg de papel reciclado. Este es un valor muy por debajo del límite de 300 kg que tiene el depósito verde. Aún así, podemos ver como cada año, de media, se desperdician 493.5 kg de papel reciclado que no se puede almacenar.
 Y lo que es aun peor, tampoco hay suficiente papel reciclado para satisfacer la demanda del mismo. De media, cada año no se pudo vender 17088.8 kg necesarios para cubrir la demanda de papel.
 
-Por lo que, el deposito verde no es lo suficientemente grande para almacenar la cantidad de papel reciclado que se acumula cada año.
+Por lo que, el depósito verde no es lo suficientemente grande para almacenar la cantidad de papel reciclado que se acumula cada año.
 
 \subsection{Demanda de papel reciclado}
 
@@ -53,5 +53,4 @@ En la figura anterior, se observa como al duplicar el rendimiento de procesamien
 
 Por tanto bastaría con obtener 1 kg extra de papel reciclado por cada 3 kg de papel usado, es decir, obtener 2 kg de papel reciclado por cada 3 kg de papel usado.
 
-Me gustaría recalcar el hecho, de que como el deposito verde no es lo suficientemente grande para contener toda la cantidad de papel reciclado que se acumula durante un año, el aumento del rendimiento en el procesado, provocaría que se desperdiciara una cantidad enorme de papel reciclado. Concretamente con el aumento antes descrito, se estarían desperdiciando aproximadamente 28000 kg de papel reciclado cada año de media.
-
+Me gustaría recalcar el hecho, de que como el depósito verde no es lo suficientemente grande para contener toda la cantidad de papel reciclado que se acumula durante un año, el aumento del rendimiento en el procesado, provocaría que se desperdiciara una cantidad enorme de papel reciclado. Concretamente con el aumento antes descrito, se estarían desperdiciando aproximadamente 28000 kg de papel reciclado cada año de media.
