Memoria Mdiscreto III

--- a/ejercicios_examen/modelosdiscretos/memoria/memoria.tex
+++ b/ejercicios_examen/modelosdiscretos/memoria/memoria.tex
@@ -17,8 +17,8 @@
 \usepackage{subcaption}
 
 \author{Alejandro Manzanares Lemus}
-\title{Práctica 4}
-\date{18 de enero de 2021}
+\title{Ejercicio de Modelos Discretos}
+\date{1 de febrero de 2021}
 
 % Document composition
 
@@ -32,6 +32,6 @@
 \tableofcontents
 
 % Document files
-\input{input/montecarlo.tex}
+\input{input/modelosdiscretos.tex}
 
 \end{document}
