Falta de ortografía

--- a/ejercicios_examen/modelosdiscretos/memoria/input/modelosdiscretos.tex
+++ b/ejercicios_examen/modelosdiscretos/memoria/input/modelosdiscretos.tex
@@ -309,7 +309,7 @@ Esto significa:
 	\item En la segunda modificación, implica que cada vez que el nivel del inventario es negativo (menor que 0), se hace un pedido de 40 más el déficit del producto, con esto se consigue que siempre haya como mínimo un stock de 41 unidades del producto.
 \end{itemize}
 
-Vemos que la versión base como la segunda modificación son muy similar, siendo la única diferencia el momento en el que se realiza el pedido. En la versión base se hace un pedido mensual (si es necesario), mientras que en la segunda modificación siempre que se acabe el stock del producto, este es repuesto.
+Vemos que la versión base como la segunda modificación son muy similares, siendo la única diferencia el momento en el que se realiza el pedido. En la versión base se hace un pedido mensual (si es necesario), mientras que en la segunda modificación siempre que se acabe el stock del producto, este es repuesto.
 
 Según los datos obtenidos, la versión base obtiene un coste total menor al que obtienen ambas modificaciones. Aunque queda muy claro que la primera modificación es la peor versión de las tres, la segunda obtiene unos resultados lo bastante buenos como para que se considere similar a la versión en función al coste total. Si nos fijamos en el coste de pedido, la versión base tiene menor coste de pedido y mayor coste de déficit, lo que es lógico, porque realiza menos pedidos.
 
